--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <h1 class="title-portada">Ven y prepara
                 mis <br> #Recetascooking</h1> 
                 <button class="btn_portada">
-                    <a class="btn_link" href="./pages/">
+                    <a class="btn_link" href="./pages/recetas.html">
                     <i class="fa-solid fa-share fa-fade"></i>  Ingresa aqui</a>
                 </button>
             </div>
@@ -99,6 +99,7 @@
             </button>
         </div>
         <!-- Form -->
+        <a name="Contacto"></a>
         <section class="form-section">
             <div class="container_form">
                 <h2 class="title-form">Contáctame</h2>
