section-recomienda-style

--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -30,9 +30,9 @@
                 <input type="checkbox" class="nav_input" id="menu">
 
                 <div class="nav-menu">
-                    <a class="item__nav" href="./pages/glosario.html"> Glosario</a>
-                    <a class="item__nav" href="./pages/recomienda.html"> Tienda Cooking</a> 
-                    <a class="item__nav" href="/pages/recetas.html">Recetas</a>
+                    <a class="item__nav" href="./glosario.html"> Glosario</a>
+                    <a class="item__nav" href="./recomienda.html"> Tienda Cooking</a> 
+                    <a class="item__nav" href="./recetas.html">Recetas</a>
                 </div>
             </div>
         </nav>
@@ -47,7 +47,6 @@
         <div class="recipes-title">
                 <input type="text" class="input_recipes" placeholder="Encuentra tu receta" aria-label="Encuentra tu receta">
                 <button class="search-btn" type="button">
-                    <!-- <i class="bi bi-search-heart"></i> -->
                     <i class="fa-solid fa-magnifying-glass" style="color: #171b21;"></i>
                 </button>
         </div>
@@ -60,39 +59,48 @@
         <div class="container-galeria">
             <!-- Receta 1 -->
             <div class="card">
-            <img class="img-box" src="../img/Ensalada.jpg" alt="Receta Galeria">
+                <a href="https://www.instagram.com/p/Cnj8-DOKGsn/" target="_blank">
+                <img class="img-box" src="../img/Ensalada.jpg" alt="Receta Galeria"></a>
             </div>
             <!-- Receta 2 -->
             <div class="card">
-            <img class="img-box" src="../img/PastaAmatriciana.jpg" alt="Receta Galeria">
+                <a href="https://www.tiktok.com/@andrescooking/video/7210421862856183082" target="_blank">
+                <img class="img-box" src="../img/PastaAmatriciana.jpg" alt="Receta Galeria"></a>
             </div>
             <!-- Receta 3 -->
             <div class="card">
-            <img class="img-box" src="../img/Milanesa de Carne.jpg" alt="Receta Galeria">
+                <a href="https://www.instagram.com/p/CoawV9qsb7D/" target="_blank">
+            <img class="img-box" src="../img/Milanesa de Carne.jpg" alt="Receta Galeria"></a>
             </div>
             <!-- Receta 4 -->
             <div class="card">
-            <img class="img-box" src="../img/Queso-Brie-horno.jpg" alt="Receta Galeria">
+            <a href="https://www.instagram.com/p/CmxPLbPojYu/" target="_blank">
+            <img class="img-box" src="../img/Queso-Brie-horno.jpg" alt="Receta Galeria"></a>
             </div>
             <!-- Receta 5 -->
             <div class="card">
-            <img class="img-box" src="../img/Risotto Camarones.jpg" alt="Receta Galeria">
+            <a href="https://www.instagram.com/p/CpDWJr4JFbv/" target="_blank">
+            <img class="img-box" src="../img/Risotto Camarones.jpg" alt="Receta Galeria"></a>
             </div>
             <!-- Receta 6 -->
             <div class="card">
-            <img class="img-box" src="../img/Tacos-Carne-Asada .jpg" alt="Receta Galeria">
+            <a href="https://www.instagram.com/p/CrBcfyfgdAr/" target="_blank">
+            <img class="img-box" src="../img/Tacos-Carne-Asada .jpg" alt="Receta Galeria"></a>
             </div>
             <!-- Receta 7 -->
             <div class="card">
-            <img class="img-box" src="../img/Torta de Naranja.jpg" alt="Receta Galeria">
+            <a href="https://www.instagram.com/p/Com11pHrjs_/" target="_blank">
+            <img class="img-box" src="../img/Torta de Naranja.jpg" alt="Receta Galeria"></a>
             </div>
             <!-- Receta 8 -->
             <div class="card">
-            <img class="img-box" src="../img/Risotto-Funghi.jpg" alt="Receta Galeria">
+            <a href="https://www.instagram.com/p/CgW3xoDv84x/?hl=es" target="_blank">
+            <img class="img-box" src="../img/Risotto-Funghi.jpg" alt="Receta Galeria"></a>
             </div>
             <!-- Receta 9 -->
             <div class="card">
-            <img class="img-box" src="../img/Canele.jpg" alt="Receta Galeria">
+            <a href="https://www.instagram.com/p/CoSZoZlPUgh/" target="_blank">
+            <img class="img-box" src="../img/Canele.jpg" alt="Receta Galeria"></a>
             </div>  
         </div>
     </main>
