section glosario-style

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <nav>
             <div class="nav-container">
                 <h1 class="title__header">@andrés cooking</h1>
-
+            <!-- Icono Hamburguesa para responsive -->
                 <label for="menu" class="nav__label">
-                <i class="fa-solid fa-bars" style="color: #f5f4f4;"></i>
+                    <i class="fa-solid fa-bars" style="color: #f5f4f4;"></i>
                 </label>
                 <input type="checkbox" class="nav_input" id="menu">
 
@@ -62,26 +62,31 @@
         </section>
         <!-- Carrousel -->
         <div class="carrousel">
+            <!-- imagen 1 -->
             <div class="elementos_destacados">
                 <a href="https://www.instagram.com/p/CoSZoZlPUgh/" target="_blank">
                     <img class="img_galeria" src="./img/Canele.jpg" alt="Galeria Imagen">
                 </a>
             </div>
+            <!-- imagen 2 -->
             <div class="elementos_destacados">
                 <a href="https://www.instagram.com/p/CpQFxD6OEI0/" target="_blank">
                     <img class="img_galeria" src="./img/recipe 1.jpg" alt="Galeria Imagen">
                 </a>
             </div>
+            <!-- imagen 3 -->
             <div class="elementos_destacados">
                 <a href="https://www.instagram.com/p/CoKmHsAtL9d/" target="_blank">
                     <img class="img_galeria" src="./img/Garlic Naan.jpg" alt="Galeria Imagen">
                     </a>
             </div>
+            <!-- imagen 4 -->
             <div class="elementos_destacados">
                 <a href="https://www.instagram.com/p/Cp7jqdkPD17/" target="_blank">
                     <img class="img_galeria" src="./img/arepa-pernil2.jpg" alt="Galeria Imagen">
                     </a>
             </div>
+            <!-- imagen 5 -->
             <div class="elementos_destacados">
                 <a href="https://www.instagram.com/p/CqvFaSWJwv1/" target="_blank">
                     <img class="img_galeria" src="./img/waffles.jpg" alt="Galeria Imagen">
@@ -92,6 +97,7 @@
         <div class="recipes__featured">
             <h2 class="title__section2">"Si tienes medio limón con clavos de olor en tu nevera, te ayudará absorver esos malos olores y a la vez aromatizará tu nevera"</h2>
             <h3 class="paragraph__section2">Descubre más de nuestros #CookingTips haciendo click</h3> 
+            <!-- boton link tips -->
             <button class=" btn_tips">
                 <a class="btn_a" href="./pages/tips.html">
                     <i class="fa-solid fa-thumbs-up" style="color: #2c2b25;"></i>Tips
