--- a/pages/recomienda.html
+++ b/pages/recomienda.html
@@ -23,15 +23,15 @@
         <nav>
             <div class="nav-container">
                 <h1 class="title__header">@andrés cooking</h1>
-
+            <!-- Icono Hamburguesa para responsive -->
                 <label for="menu" class="nav__label">
-                <i class="fa-solid fa-bars" style="color: #f5f4f4;"></i>
+                    <i class="fa-solid fa-bars" style="color: #f5f4f4;"></i>
                 </label>
                 <input type="checkbox" class="nav_input" id="menu">
-
+            <!-- menu -->
                 <div class="nav-menu">
                     <a class="item__nav" href="./glosario.html"> Glosario</a>
-                    <a class="item__nav" href="./recomienda.html"> Tienda Cooking</a> 
+                    <a class="item__nav" href="./tips.html"> Tienda Cooking</a> 
                     <a class="item__nav" href="./recetas.html">Recetas</a>
                 </div>
             </div>
@@ -52,55 +52,58 @@
         <div class="container-galeria">
             <!-- Receta 1 -->
             <div class="card">
-            <a href="https://www.instagram.com/p/CrGmTd_ueg4/">
+            <a href="https://www.instagram.com/p/CrGmTd_ueg4/" target="_blank">
             <img class="img-box" src="../img/productos-recomendados.jpg" alt="Receta Galeria"></a>
             </div>
             <!-- Receta 2 -->
             <div class="card">
-            <a href="https://www.instagram.com/p/Cq6WqfzMkR-/">
+            <a href="https://www.instagram.com/p/Cq6WqfzMkR-/" target="_blank">
             <img class="img-box" src="../img/recomendacion-one.jpg" alt="Receta Galeria"></a>
             </div>
             <!-- Receta 3 -->
             <div class="card">
-            <a href="https://www.instagram.com/p/CqiOHMnjiHA/">
+            <a href="https://www.instagram.com/p/CqiOHMnjiHA/" target="_blank">
             <img class="img-box" src="../img/recomendacion-two.jpg" alt="Receta Galeria"></a>
             </div>
             <!-- Receta 4 -->
             <div class="card">
-            <a href="https://www.instagram.com/p/Cqah6KVD4_p/">
+            <a href="https://www.instagram.com/p/Cqah6KVD4_p/" target="_blank">
             <img class="img-box" src="../img/recomendacion-three.jpg" alt="Receta Galeria"></a>
             </div>
             <!-- Receta 5 -->
             <div class="card">
-            <a href="https://www.instagram.com/p/CqREOm1jBLx/">
+            <a href="https://www.instagram.com/p/CqREOm1jBLx/" target="_blank">
             <img class="img-box" src="../img/recomendacion-four.jpg" alt="Receta Galeria"></a>
             </div>
             <!-- Receta 6 -->
             <div class="card">
-            <a href="https://www.instagram.com/p/Cp-dIz7rR01/">
+            <a href="https://www.instagram.com/p/Cp-dIz7rR01/" target="_blank">
             <img class="img-box" src="../img/recomendacion-six.jpg" alt="Receta Galeria"></a>
             </div>
             <!-- Receta 7 -->
             <div class="card">
-            <a href="https://www.instagram.com/p/CqItoIvMQDw/">
+            <a href="https://www.instagram.com/p/CqItoIvMQDw/" target="_blank">
             <img class="img-box" src="../img/recomendacion-five.jpg" alt="Receta Galeria"></a>
             </div>
             <!-- Receta 8 -->
             <div class="card">
-            <a href="https://www.instagram.com/p/Cp0mhqjPiRO/">
+            <a href="https://www.instagram.com/p/Cp0mhqjPiRO/" target="_blank">
             <img class="img-box" src="../img/Moledor.jpg" alt="Receta Galeria"></a>
             </div>
             <!-- Receta 9 -->
             <div class="card">
-            <a href="https://www.instagram.com/p/CpsLhtsOrJQ/">
+            <a href="https://www.instagram.com/p/CpsLhtsOrJQ/" target="_blank">
             <img class="img-box" src="../img/Destapa-corchos.jpg" alt="Receta Galeria"></a>
-            </div>  
+            </div>   
         </div>
         <!-- Boton de ir a la tienda -->
         <div class="btn-recomienda">
-        <button><a href="https://www.amazon.com/shop/andrescooking/list/2IT823ZEOKKQX?linkCode=spc&tag=andresdeolive-20&domainId=influencer&asc_contentid=amzn1.ideas.2IT823ZEOKKQX">Ingresa a la tienda cooking</a></button>
+            <button>
+                <a href="https://www.amazon.com/shop/andrescooking/list/2IT823ZEOKKQX?linkCode=spc&tag=andresdeolive-20&domainId=influencer&asc_contentid=amzn1.ideas.2IT823ZEOKKQX" target="_blank">Ingresa a la tienda cooking</a>
+            </button>
         </div>
     </main>
+    <!-- footer -->
     <footer>
         <div class="container-footer">
             <span>Sitio Web creado con &#128151 por &copy;JhaiRamos</span>
