--- a/pages/tips.html
+++ b/pages/tips.html
@@ -23,12 +23,12 @@
         <nav>
             <div class="nav-container">
                 <h1 class="title__header">@andrés cooking</h1>
-
+            <!-- Icono Hamburguesa para responsive -->
                 <label for="menu" class="nav__label">
-                <i class="fa-solid fa-bars" style="color: #f5f4f4;"></i>
+                    <i class="fa-solid fa-bars" style="color: #f5f4f4;"></i>
                 </label>
                 <input type="checkbox" class="nav_input" id="menu">
-
+            <!-- menu -->
                 <div class="nav-menu">
                     <a class="item__nav" href="./glosario.html"> Glosario</a>
                     <a class="item__nav" href="./recomienda.html"> Tienda Cooking</a> 
@@ -52,55 +52,58 @@
         <div class="container-galeria">
             <!-- Receta 1 -->
             <div class="card">
-            <a href="https://www.instagram.com/p/CosqmZaJmVi/">
-            <img class="img-box" src="../img/tips-one.jpg" alt="Receta Galeria"></a>
+                <a href="https://www.instagram.com/p/CosqmZaJmVi/" target="_blank">
+                <img class="img-box" src="../img/tips-one.jpg" alt="Receta Galeria"></a>
             </div>
             <!-- Receta 2 -->
             <div class="card">
-            <a href="https://www.instagram.com/p/CouoOj-pl8Q/">
-            <img class="img-box" src="../img/tips-two.jpg" alt="Receta Galeria"></a>
+                <a href="https://www.instagram.com/p/CouoOj-pl8Q/" target="_blank">
+                <img class="img-box" src="../img/tips-two.jpg" alt="Receta Galeria"></a>
             </div>
             <!-- Receta 3 -->
             <div class="card">
-            <a href="https://www.instagram.com/p/CodT5m0JldF/">
-            <img class="img-box" src="../img/tips-three.jpg" alt="Receta Galeria"></a>
+                <a href="https://www.instagram.com/p/CodT5m0JldF/" target="_blank">
+                <img class="img-box" src="../img/tips-three.jpg" alt="Receta Galeria"></a>
             </div>
             <!-- Receta 4 -->
             <div class="card">
-            <a href="https://www.instagram.com/p/Cg4XUK7PPLG/">
-            <img class="img-box" src="../img/tips-four.jpg" alt="Receta Galeria"></a>
+                <a href="https://www.instagram.com/p/Cg4XUK7PPLG/" target="_blank">
+                <img class="img-box" src="../img/tips-four.jpg" alt="Receta Galeria"></a>
             </div>
             <!-- Receta 5 -->
             <div class="card">
-            <a href="https://www.instagram.com/p/CgrknDwt0G2/">
-            <img class="img-box" src="../img/tips-five.jpg" alt="Receta Galeria"></a>
+                <a href="https://www.instagram.com/p/CgrknDwt0G2/" target="_blank">
+                <img class="img-box" src="../img/tips-five.jpg" alt="Receta Galeria"></a>
             </div>
             <!-- Receta 6 -->
             <div class="card">
-            <a href="https://www.instagram.com/p/CgKIOnEJ0dF/">
-            <img class="img-box" src="../img/tips-six.jpg" alt="Receta Galeria"></a>
+                <a href="https://www.instagram.com/p/CgKIOnEJ0dF/" target="_blank">
+                <img class="img-box" src="../img/tips-six.jpg" alt="Receta Galeria"></a>
             </div>
             <!-- Receta 7 -->
             <div class="card">
-            <a href="https://www.instagram.com/p/CgHZs6SuAUn/">
-            <img class="img-box" src="../img/tips-seven.jpg" alt="Receta Galeria"></a>
+                <a href="https://www.instagram.com/p/CgHZs6SuAUn/" target="_blank">
+                <img class="img-box" src="../img/tips-seven.jpg" alt="Receta Galeria"></a>
             </div>
             <!-- Receta 8 -->
             <div class="card">
-            <a href="https://www.instagram.com/p/CgE6BeCuHe6/">
-            <img class="img-box" src="../img/tips-eight.jpg" alt="Receta Galeria"></a>
+                <a href="https://www.instagram.com/p/CgE6BeCuHe6/" target="_blank">
+                <img class="img-box" src="../img/tips-eight.jpg" alt="Receta Galeria"></a>
             </div>
             <!-- Receta 9 -->
             <div class="card">
-            <a href="https://www.instagram.com/p/CeoNIVXuz4Z/">
-            <img class="img-box" src="../img/tips-nine.jpg" alt="Receta Galeria"></a>
+                <a href="https://www.instagram.com/p/CeoNIVXuz4Z/" target="_blank">
+                <img class="img-box" src="../img/tips-nine.jpg" alt="Receta Galeria"></a>
             </div>  
         </div>
         <!-- Boton de ir a la tienda -->
         <div class="btn-recomienda">
-        <button><a href="https://www.amazon.com/shop/andrescooking/list/2IT823ZEOKKQX?linkCode=spc&tag=andresdeolive-20&domainId=influencer&asc_contentid=amzn1.ideas.2IT823ZEOKKQX">Ingresa a la tienda cooking</a></button>
+            <button>
+                <a href="https://www.amazon.com/shop/andrescooking/list/2IT823ZEOKKQX?linkCode=spc&tag=andresdeolive-20&domainId=influencer&asc_contentid=amzn1.ideas.2IT823ZEOKKQX">Ingresa a la tienda cooking</a>
+            </button>
         </div>
     </main>
+    <!-- footer -->
     <footer>
         <div class="container-footer">
             <span>Sitio Web creado con &#128151 por &copy;JhaiRamos</span>
