--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -23,16 +23,16 @@
         <nav>
             <div class="nav-container">
                 <h1 class="title__header">@andrés cooking</h1>
-
+            <!-- Icono Hamburguesa para responsive -->
                 <label for="menu" class="nav__label">
-                <i class="fa-solid fa-bars" style="color: #f5f4f4;"></i>
+                    <i class="fa-solid fa-bars" style="color: #f5f4f4;"></i>
                 </label>
                 <input type="checkbox" class="nav_input" id="menu">
-
+            <!-- Menú -->
                 <div class="nav-menu">
                     <a class="item__nav" href="./glosario.html"> Glosario</a>
                     <a class="item__nav" href="./recomienda.html"> Tienda Cooking</a> 
-                    <a class="item__nav" href="./recetas.html">Recetas</a>
+                    <a class="item__nav" href="./tips.html">Tips</a>
                 </div>
             </div>
         </nav>
@@ -70,40 +70,41 @@
             <!-- Receta 3 -->
             <div class="card">
                 <a href="https://www.instagram.com/p/CoawV9qsb7D/" target="_blank">
-            <img class="img-box" src="../img/Milanesa de Carne.jpg" alt="Receta Galeria"></a>
+                <img class="img-box" src="../img/Milanesa de Carne.jpg" alt="Receta Galeria"></a>
             </div>
             <!-- Receta 4 -->
             <div class="card">
-            <a href="https://www.instagram.com/p/CmxPLbPojYu/" target="_blank">
-            <img class="img-box" src="../img/Queso-Brie-horno.jpg" alt="Receta Galeria"></a>
+                <a href="https://www.instagram.com/p/CmxPLbPojYu/" target="_blank">
+                <img class="img-box" src="../img/Queso-Brie-horno.jpg" alt="Receta Galeria"></a>
             </div>
             <!-- Receta 5 -->
             <div class="card">
-            <a href="https://www.instagram.com/p/CpDWJr4JFbv/" target="_blank">
-            <img class="img-box" src="../img/Risotto Camarones.jpg" alt="Receta Galeria"></a>
+                <a href="https://www.instagram.com/p/CpDWJr4JFbv/" target="_blank">
+                <img class="img-box" src="../img/Risotto Camarones.jpg" alt="Receta Galeria"></a>
             </div>
             <!-- Receta 6 -->
             <div class="card">
-            <a href="https://www.instagram.com/p/CrBcfyfgdAr/" target="_blank">
-            <img class="img-box" src="../img/Tacos-Carne-Asada .jpg" alt="Receta Galeria"></a>
+                <a href="https://www.instagram.com/p/CrBcfyfgdAr/" target="_blank">
+                <img class="img-box" src="../img/Tacos-Carne-Asada .jpg" alt="Receta Galeria"></a>
             </div>
             <!-- Receta 7 -->
             <div class="card">
-            <a href="https://www.instagram.com/p/Com11pHrjs_/" target="_blank">
-            <img class="img-box" src="../img/Torta de Naranja.jpg" alt="Receta Galeria"></a>
+                <a href="https://www.instagram.com/p/Com11pHrjs_/" target="_blank">
+                <img class="img-box" src="../img/Torta de Naranja.jpg" alt="Receta Galeria"></a>
             </div>
             <!-- Receta 8 -->
             <div class="card">
-            <a href="https://www.instagram.com/p/CgW3xoDv84x/?hl=es" target="_blank">
-            <img class="img-box" src="../img/Risotto-Funghi.jpg" alt="Receta Galeria"></a>
+                <a href="https://www.instagram.com/p/CgW3xoDv84x/?hl=es" target="_blank">
+                <img class="img-box" src="../img/Risotto-Funghi.jpg" alt="Receta Galeria"></a>
             </div>
             <!-- Receta 9 -->
             <div class="card">
-            <a href="https://www.instagram.com/p/CoSZoZlPUgh/" target="_blank">
-            <img class="img-box" src="../img/Canele.jpg" alt="Receta Galeria"></a>
+                <a href="https://www.instagram.com/p/CoSZoZlPUgh/" target="_blank">
+                <img class="img-box" src="../img/Canele.jpg" alt="Receta Galeria"></a>
             </div>  
         </div>
     </main>
+    <!-- footer -->
     <footer>
         <div class="container-footer">
             <span>Sitio Web creado con &#128151 por &copy;JhaiRamos</span>
