--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="./img/favicon.jpg" type="image/x-icon">
     <title>Andrés Cooking con Bootstrap</title>
 
     <!-- Link Fontawesome -->
